Modified file path in front-end and backend; Moved routing functions to corresponding folders
